k8s/temp/realmd/templates/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: default
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.212
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: proxied-tcp-8085
      port: 8085
      targetPort: 8085
      protocol: TCP
    - name: proxied-tcp-3724
      port: 3724
      targetPort: 3724
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
