k8s/temp/realmd/templates/network-policy-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
